Fri Mar 19 2004  Joe ALlen <jhallen@world.std.com>
	* tty.c:
	Fix shell window for SunOS 5.8

Thu Mar 18 2004  Joe Allen <jhallen@world.std.com>
	* usearch.c, regex.c, regex.h:
	Allow full escape sequences in replacement strings
	fixes bug #828156

Thu Mar 18 2004  Joe Allen <jhallen@world.std.com>
	* b.c:
	Automatically detect MS-DOS files (files with ^M^J terminated lines)

Thu Mar 18 2004  Joe Allen <jhallen@world.std.com>
	* tw.c, uedit.c, tty.c:
	Fix ^C and ^D in shell windows (for linux at least)

Mon Jan 19 2004  Marek 'Marx' Grac <xgrac@fi.muni.cz>
	* utag.c:
	Correct file position by using tags file generated from ctags 5.5.2

Wed Jul  9 2003  John Morrissey <jwm@horde.net>
	* configure.ac:
	look for snprintf() in libdb too (fixes compilation on OSF1)

Fri Jun 20 2003  Anil Madhavapeddy <anil@recoil.org>
	* usearch.c:
	fix boundary to snprintf()

Mon Jun 16 2003  Vitezslav Samel <samel@mail.cz>
	* uedit.c
	u_goto_prev()/u_goto_next() fix take two: skip over spaces
	(return of joe-2.8 behaviour)

Sun Jun  1 2003  Vitezslav Samel <samel@mail.cz>
	* cmd.c, tab.c, uisrch.c:
	don't beep when not asked
	(suggestion by Marc Joosen <marcj@historia.et.tudelft.nl>)

Sun Jun  1 2003  Vitezslav Samel <samel@mail.cz>
	* configure.ac, ublock.c:
	NEW FEATURE: when filtering block put JOE_FILENAME= with the right
	filename into the environment (only when putenv() is available);
	patch by Marc Joosen <marcj@historia.et.tudelft.nl>

Sat May 31 2003  Vitezslav Samel <samel@mail.cz>
	* uedit.c:
	make u_goto_prev()/u_goto_next() act like ubackw()/u_word_delete()
	when moving cursor, i.e. operate on the same class of characters

Sat May 31 2003  Vitezslav Samel <samel@mail.cz>
	* configure.ac:
	change version number to include _CVS suffix

Mon May  5 2003  Vitezslav Samel <samel@mail.cz>
	*** Release joe-2.9.8 ***

	* NEWS, configure.ac, main.c:
	update NEWS; bump up version; update copyright year
	
Sat May  3 2003  Vitezslav Samel <samel@mail.cz>
	* README: